--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,9 +1,6 @@
 name: Python Linting
-on:
-  push:
-    branches: [master]
-  pull_request:
-  workflow_dispatch:
+on: push
+
 jobs:
   build:
     runs-on: ubuntu-latest
